// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delay basics 1`] = `
Float32Array [
  0,
  0.5,
  1,
  1.5,
]
`;

exports[`sdelay basics 1`] = `
Float32Array [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  1,
  2,
  3,
  4,
  4,
  3,
  2,
  1,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;
